"before summer holidays" version, Standard lib checked. Vehicules checked with Standard
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@65 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/BasicMtl_Transformation_libraries/src/lang/build.xml
+++ b/BasicMTL_projects/BasicMtl_Transformation_libraries/src/lang/build.xml
@@ -1,12 +1,12 @@
-<!-- $Id: build.xml,v 1.4 2003-08-09 15:19:50 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.5 2003-08-09 16:43:21 jpthibau Exp $ -->
 <project name="BasicMtl_Transformation_libraires" default="Standard_antlr2tll" basedir=".">
 	<description>
         Build file for the different BasicMTL files in this project
 	</description>
 	<!-- set global properties for this build -->
 	<property name="src" location="./src"/>
-	<property name="bin" location="../../bin/Standard"/>
-	<property name="build" location="../../build/Standard"/>
+	<property name="bin" location="../../bin/"/>
+	<property name="build" location="../../build/"/>
 
 	<target name="init">
     	<!-- Create the time stamp -->
