Ant compilation unit: management of multi project
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@77 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/BasicMtl_Transformation_libraries/src/lang/build.xml
+++ b/BasicMTL_projects/BasicMtl_Transformation_libraries/src/lang/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.5 2003-08-09 16:43:21 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.6 2003-08-12 14:50:00 ffondeme Exp $ -->
 <project name="BasicMtl_Transformation_libraires" default="Standard_antlr2tll" basedir=".">
 	<description>
         Build file for the different BasicMTL files in this project
@@ -38,7 +38,7 @@
 	<target name="compile Standard" depends="Standard_antlr2tll"
   	 	description="Generate code for Standard.mtl">
 	    <mkdir dir="${build}/src/java/Standard"/>
-	 	<java jar="../../../BasicMtlJavaCodeGenerator/dist/bin/TLLCodeGenerator.jar" 
+	 	<java jar="../../../BasicMtlJavaCodeGenerator/dist/bin/BasicMtlJavaCodeGenerator.jar" 
            fork="true"
            failonerror="true"
            >
