--- a/BasicMTL_projects/BasicMtl_Transformation_libraries/src/lang/build.xml
+++ b/BasicMTL_projects/BasicMtl_Transformation_libraries/src/lang/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.6 2003-08-12 14:50:00 ffondeme Exp $ -->
+<!-- $Id: build.xml,v 1.7 2003-08-14 21:37:44 ffondeme Exp $ -->
 <project name="BasicMtl_Transformation_libraires" default="Standard_antlr2tll" basedir=".">
 	<description>
         Build file for the different BasicMTL files in this project
@@ -30,7 +30,7 @@
          <arg value="-TLLPath"/> 
          <arg value="${build}/src/"/> 
          <arg value="-PackageName"/> 
-         <arg value="Standard.src.java.Standard"/> 
+         <arg value="Standard"/> 
        </java>
  
 	</target>
